# local-research-agent

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  research_notes.md  weather.md
agent/: core.py  mcp_client.py  models.py  reflection.py  skill_selector.py  skills.py
agent/providers/: anthropic_provider.py  base.py  openai_provider.py
examples/agent_logs/: mcp_research.md
experiments/: react_agent.ipynb
mcp_server/: README.md  pyproject.toml
skills/code-review/: SKILL.md
skills/research-writer/: SKILL.md  template.md
