[project]
name = "agents"
version = "0.1.0"
description = "A small provider-agnostic research agent with local MCP tools, skill selection, and memory experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.57.1",
    "exa-py>=2.8.1",
    "fastmcp>=3.1.0",
    "mcp>=1.26.0",
    "numpy>=2.2.6",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
